# money_monager_backend

./: .env  .gitignore  Cargo.toml  docker-compose.yml  meta.json  reset_db_local.sh
docs/: 0_requiremant_difinition.md  1-1_database_design.drawio  1_database_design_document.md  1_database_design_document_v1.md  2_api_document.md
migrations/2024-01-08-060255_create_initial/: down.sql  up.sql
money-manager-adapter/: Cargo.toml
money-manager-app/: Cargo.toml
money-manager-domain/: Cargo.toml
money-manager-driver/: Cargo.toml
money_manager_adapter/: Cargo.toml
money_manager_adapter/src/: modules.rs
money_manager_adapter/src/model/: user.rs
money_manager_adapter/src/persistence/: dynamodb.rs
money_manager_adapter/src/repository/: health_check.rs  mod.rs  user.rs
money_manager_app/: Cargo.toml
money_manager_app/src/model/: user.rs
money_manager_app/src/usecase/: health_check.rs  user.rs
money_manager_domain/: Cargo.toml
money_manager_domain/src/model/: user.rs
money_manager_domain/src/repository/: health_check.rs  user.rs
money_manager_driver/: Cargo.toml
money_manager_driver/src/context/: validate.rs
money_manager_driver/src/model/: mod.rs  user.rs
money_manager_driver/src/module/: mod.rs
money_manager_driver/src/route/: health_check.rs  user.rs
money_manager_driver/src/startup/: mod.rs
src/: lib.rs  schema.rs
src/api/: routes.rs
src/api/handlers/: user.rs
src/db/: connections.rs
src/models/: users.rs
src/services/: user_service.rs
