[package]
name = "money_manager_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
mime = "0.3"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1", features = ["postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0.37"
tracing = { version = "0.1"}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
