[package]
name = "money_manager_driver"
edition = "2021"
version.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
money_manager_adapter = { path = "../money_manager_adapter" }
money_manager_app = { path = "../money_manager_app" }

anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
validator = { workspace = true }
axum = { workspace = true }
mime = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
